test/expected/large/casformats/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: casformats
    foo.com/duversion: 1.5.6-20190923.1569266192327
    foo.com/version: 1.5.6
  labels:
    app.kubernetes.io/name: casformats
    helm.sh/chart: casformats-1.5.6
  name: casformats
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /casFormats
    - uri:
        prefix: /casFormats/
    route:
    - destination:
        host: casformats.peekay.svc.cluster.local
